force-app/main/default/objects/WorkOrder/fields/Create_Pickup_Label__c.field-meta.xml
<CustomField>
    <fullName>Create_Pickup_Label__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Pickup Label</label>
    <type>Checkbox</type>
</CustomField>