force-app/main/default/objects/WorkOrder/fields/Pickup_Label_ContentVersion__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Label_ContentVersion__c</fullName>
    <label>Pickup Label Content Version Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>